--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer a:hover{color:#ff6b9d;}
 
   <footer>
     Made with ❤️ by AWE
-    <a href="https://twitter.com/Gabii_awee" target="_blank">🐦 Follow on X</a>
+    <a href="https://twitter.com/Gabii_awee" target="_blank">Follow on 🐦</a>
   </footer>
 
 <script>
@@ -401,5 +401,6 @@ footer a:hover{color:#ff6b9d;}
 </script>
 </body>
 </html>
+
 
 
